biblememeroy and homepage changes

--- a/app/views/pages/biblememory.html.erb
+++ b/app/views/pages/biblememory.html.erb
@@ -1,49 +1,42 @@
 <% provide(:title, "Bible Memory") %>
-<div class="row">
-  <div class="col">
-    <h1>How to Memorize Large Sections of the Bible with Ease
-      <br>
-      <p class="text-muted">by Pastor Steven L. Anderson</p>
-    </h1>
-    <h5>There are 3 primary methods that will revolutionize the way you memorize the Bible:</h5>
-    <p>
-      <strong>The first method</strong> I discovered was the one contained in this link which explains how to retain what you have memorized: <a href="http://www.thebible.net/biblicaltheism/0402memorizent.htm">You can memorize the New Testament in 5 years</a>.
-    </p>
-    <p>
-      <strong>The second method</strong> is the secret repetition method. This involves chanting verses in your mind while performing everyday tasks. It is called the "secret repetition" method because no one around you is aware that you are quoting your verses.
-    </p>
-    <p>
-      <strong>The third method</strong> is my variation on the "secret repetition" method which is breaking chapters and verses down into very small parts which allows me to memorize verses even when my mind must be occupied with other things. It takes almost no mental effort to quote very short phrases, and if these short phrases are quoted hundreds of times, putting them together into chapters later is very easy.
-    </p>
-    <h5>Here is an example:</h5>
-    <p>
-      If I were memorizing Acts 5:42, I would break it down in this way:
-    </p>
-    <p>
-    <ul class="list-group list-unstyled">
-      <li class="list-group-item">1. And daily in the temple..., And daily in the temple... (about 100X)</li>
-      <li class="list-group-item">2. ...and in every house..., ...and in every house... (about 100X)</li>
-      <li class="list-group-item">3. ...they ceased not to teach and preach..., ...they ceased not to teach and preach... (about 100X)</li>
-      <li class="list-group-item">4. ...to teach and preach Jesus Christ., ...to teach and preach Jesus Christ. (about 100X)</li>
-    </ul>
-    </p>
-    <p>
-      Notice the overlapping of sections 3 <strong>add symbol</strong> 4. This is very helpful.
-    </p>
-    <p>
-      At this rate I would have the verse memorized in 8 minutes. This may seem like a long time, but remember, this can easily be done while you are about your daily tasks. If you can keep this rate up for only 4 hours, you will have memorized 30 verses! 29 verses is the average length of a new testament chapter.
-    </p>
-    <p>
-      A day spent memorizing verses this way (use 3x5 cards) and also quoting chapters you've already learned is like spending an entire day reading the Bible except it takes almost no time out of your schedule.
-    </p>
-    <p>
-      Meditating in the word of God day and night will revolutionize your soul-winning, Bible knowledge, preaching, walk with God, etc.
-    </p>
-  </div>
-</div>
-<div class="row">
-  <div class="col-7">
-    <h5>Here are a few of God's promises associated with memorization/meditation:</h5>
+<h2>How to Memorize Large Sections of the Bible with Ease</h2>
+<p class="text-muted">by Pastor Steven L. Anderson</p>
+<h5>There are 3 primary methods that will revolutionize the way you memorize the Bible:</h5>
+<p>
+  <b>The first method</b> I discovered was the one contained in this link which explains how to retain what you have memorized: <a href="http://www.thebible.net/biblicaltheism/0402memorizent.htm">You can memorize the New Testament in 5 years</a>.
+</p>
+<p>
+  <b>The second method</b> is the secret repetition method. This involves chanting verses in your mind while performing everyday tasks. It is called the "secret repetition" method because no one around you is aware that you are quoting your verses.
+</p>
+<p>
+  <b>The third method</b> is my variation on the "secret repetition" method which is breaking chapters and verses down into very small parts which allows me to memorize verses even when my mind must be occupied with other things. It takes almost no mental effort to quote very short phrases, and if these short phrases are quoted hundreds of times, putting them together into chapters later is very easy.
+</p>
+<h5>Here is an example:</h5>
+<p>
+  If I were memorizing Acts 5:42, I would break it down in this way:
+</p>
+<p>
+  <p>1. And daily in the temple..., And daily in the temple... (about 100X)</p>
+  <p>2. ...and in every house..., ...and in every house... (about 100X)</p>
+  <p>3. ...they ceased not to teach and preach..., ...they ceased not to teach and preach... (about 100X)</p>
+  <p>4. ...to teach and preach Jesus Christ., ...to teach and preach Jesus Christ. (about 100X)</p>
+</p>
+<p>
+  Notice the overlapping of sections 3 <b>add symbol</b> 4. This is very helpful.
+</p>
+<p>
+  At this rate I would have the verse memorized in 8 minutes. This may seem like a long time, but remember, this can easily be done while you are about your daily tasks. If you can keep this rate up for only 4 hours, you will have memorized 30 verses! 29 verses is the average length of a new testament chapter.
+</p>
+<p>
+  A day spent memorizing verses this way (use 3x5 cards) and also quoting chapters you've already learned is like spending an entire day reading the Bible except it takes almost no time out of your schedule.
+</p>
+<p>
+  Meditating in the word of God day and night will revolutionize your soul-winning, Bible knowledge, preaching, walk with God, etc.
+</p>
+
+<h5>Here are a few of God's promises associated with memorization/meditation:</h5>
+<div class="d-flex">
+  <div class="mr-2">
     <blockquote class="verse">
       <p class="mb-0">“This book of the law shall not depart out of thy mouth; but thou shalt meditate therein day and night, that thou mayest observe to do according to all that is written therein: for then thou shalt make thy way prosperous, and then thou shalt have good success.”</p>
       <p>Joshua 1:8</p>
@@ -63,12 +56,30 @@
       To my knowledge no one has ever memorized the entire Bible, but I would like to accomplish that in my lifetime. It is actually a very realistic goal given the methods listed above.
     </p>
   </div>
-  <div class="col-5">
-    <iframe width="500" height="300" src="https://www.youtube.com/embed/qfnB4qWJhes" frameborder="0" allowfullscreen></iframe>
+  <div>
+    <%= ytube_embed('qfnB4qWJhes', 400, 300) %>
   </div>
 </div>
-<div class="row">
-  <div class="col">
-    <h5>Here are a few more resources:</h5>
-  </div>
+
+<h5>Here are a few more resources:</h5>
+<div class="d-flex d-flex flex-column">
+  <%= link_to "Preaching the entire book of Hebrews from Memory", Sermon.find(1728).mp3.url, class: "download", download: '', id: 1728 %>
+  <%= link_to "Bible Memorization Techniques", Sermon.find(1586).mp3.url, class: "download", download: '', id: 1586 %>
+  <%= link_to "Thou Shalt Meditate", Sermon.find(1233).mp3.url, class: "download", download: '', id: 1233 %>
+  <%= link_to "Psalm 119 (Aleph-He)", Sermon.find(232).mp3.url, class: "download", download: '', id: 232 %>
 </div>
+
+<script>
+  $(".download").on("click", function() {
+      $.ajax({
+          url: "/download",
+          data: {id: $(this).attr("id")},
+          success: function(response, status) {
+                console.log(status);
+          },
+          error: function(data) {
+              alert("Sorry, there was an error!");
+          }
+      });
+  });
+</script>
