--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -13,9 +13,9 @@
     <b>Church</b>.</p>
     <p>Faithful Word Baptist Church is a young, family-integrated church. We would love to get to know you personally at one of our services!</p>
     <p><%= image_tag 'new_sml_27x13.gif', style:"margin-right: 5px;" %>Pastor Anderson's materials have now been translated into <%= link_to "over 115 languages!", foreignlanguages_path %></p>
-    <p><%= image_tag 'new_sml_27x13.gif', style:"margin-right: 5px;" %>Check out Pastor Anderson's new documentary "Burn That Way After All:"</p>
+    <p><%= image_tag 'new_sml_27x13.gif', style:"margin-right: 5px;" %>Take a video tour of our church building:</p>
     <div align="center">
-      <%= ytube_embed("fSqU7qqu6eM", 580, 322) %>
+      <%= ytube_embed("0GKOq2EMeBs", 560, 315) %>
     </div>
     <blockquote class="verse">
       <p class="mb-0">“Holding fast the faithful word as he hath been taught, that he may be able by sound doctrine both to exhort and to convince the gainsayers.”</p>
