preaching show pages and biblememory pages

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -334,7 +334,7 @@ li {
  PREACHING SHOW PAGE
    ------------------   */
 #right-border {
-  border-right: 1px solid #999;
+  border-right: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 #sermon-downloads-heading {
