--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,7 +1,7 @@
 <div id="event_<%= event.id %>">
-  <h4><%= event.title %></h4>
-  <h6><%= event.date.strftime("%A %B %d") %></h6>
-  <h6><%= event.location %></h6>
+  <h6><%= event.title %></h6>
+  <p class='mb-0'><%= event.date.strftime("%A %B %d") %></p>
+  <p class='mb-0'><%= event.location %></p>
   <!--<button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#myupdateevent_<%= event.id %>">Edit</button>
   <%= link_to 'Delete', event, method: :delete, class: "btn btn-primary btn-sm", remote: true %>-->
 </div>
