--- a/app/views/pages/biblememory.html.erb
+++ b/app/views/pages/biblememory.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Bible Memory") %>
-<h2>How to Memorize Large Sections of the Bible with Ease</h2>
+<h2 class="mb-0">How to Memorize Large Sections of the Bible with Ease</h2>
 <p class="text-muted">by Pastor Steven L. Anderson</p>
 <h5>There are 3 primary methods that will revolutionize the way you memorize the Bible:</h5>
 <p>
@@ -12,15 +12,15 @@
   <b>The third method</b> is my variation on the "secret repetition" method which is breaking chapters and verses down into very small parts which allows me to memorize verses even when my mind must be occupied with other things. It takes almost no mental effort to quote very short phrases, and if these short phrases are quoted hundreds of times, putting them together into chapters later is very easy.
 </p>
 <h5>Here is an example:</h5>
-<p>
+<p class="mb-0">
   If I were memorizing Acts 5:42, I would break it down in this way:
 </p>
-<p>
-  <p>1. And daily in the temple..., And daily in the temple... (about 100X)</p>
-  <p>2. ...and in every house..., ...and in every house... (about 100X)</p>
-  <p>3. ...they ceased not to teach and preach..., ...they ceased not to teach and preach... (about 100X)</p>
-  <p>4. ...to teach and preach Jesus Christ., ...to teach and preach Jesus Christ. (about 100X)</p>
-</p>
+<div class="ml-5 my-3">
+  <p class="mb-0">1. And daily in the temple..., And daily in the temple... (about 100X)</p>
+  <p class="mb-0">2. ...and in every house..., ...and in every house... (about 100X)</p>
+  <p class="mb-0">3. ...they ceased not to teach and preach..., ...they ceased not to teach and preach... (about 100X)</p>
+  <p class="mb-0">4. ...to teach and preach Jesus Christ., ...to teach and preach Jesus Christ. (about 100X)</p>
+</div>
 <p>
   Notice the overlapping of sections 3 <b>add symbol</b> 4. This is very helpful.
 </p>
@@ -63,11 +63,22 @@
 
 <h5>Here are a few more resources:</h5>
 <div class="d-flex d-flex flex-column">
-  <%= link_to "Preaching the entire book of Hebrews from Memory", Sermon.find(1728).mp3.url, class: "download", download: '', id: 1728 %>
-  <%= link_to "Bible Memorization Techniques", Sermon.find(1586).mp3.url, class: "download", download: '', id: 1586 %>
-  <%= link_to "Thou Shalt Meditate", Sermon.find(1233).mp3.url, class: "download", download: '', id: 1233 %>
-  <%= link_to "Psalm 119 (Aleph-He)", Sermon.find(232).mp3.url, class: "download", download: '', id: 232 %>
+  <p class="mb-0"><%= link_to '"Preaching the entire book of Hebrews from Memory"', Sermon.find(1728).mp3.url, class: "download", download: '', id: 1728 %> Sermon mp3 preached on 3/26/06</p>
+  <p class="mb-0"><%= link_to '"Bible Memorization Techniques"', Sermon.find(1586).mp3.url, class: "download", download: '', id: 1586 %> Sermon mp3 preached on 3/18/07</p>
+  <p class="mb-0"><%= link_to '"Thou Shalt Meditate"', Sermon.find(1233).mp3.url, class: "download", download: '', id: 1233 %> Sermon mp3 preached on 6/14/09</p>
+  <p class="mb-0"><%= link_to '"Bible Memory"', Sermon.find(1002).mp3.url, class: "download", download: '', id: 1002 %> Sermon mp3 preached on 1/2/11</p>
+  <p class="mb-0"><%= link_to '"Psalm 119 (Aleph-He)"', Sermon.find(232).mp3.url, class: "download", download: '', id: 232 %> Sermon mp3 preached on 11/22/15</p>
+  <div>
+  <%= link_to "Monthly quoting/reading schedule I use", 'http://www.faithfulwordbaptist.org/schedule.html', target: '_blank'%>
+  - <%= link_to 'DOC', '/bible_schedule.docx', download: '' %>
+  - <%= link_to 'ODT', '/bible_schedule.odt', download: '' %>
+  - <%= link_to 'PDF', '/bible_schedule.pdf', download: '' %>
+  </div>
+  <p><%= link_to "Template for printing note cards for Bible verses", '/bible_card_template.docx', download: '' %> (You can paste verses from <%= link_to 'E-sword', 'http://www.e-sword.net/', target: '_blank' %>, <%= link_to 'The Word', 'http://www.theword.gr/', target: '_blank' %>, or other Bible programs into this template)</p>
+  <%= link_to "List of foods that will help or harm your memorization of the Bible", 'http://www.faithfulwordbaptist.org/brainfood.html', target: '_blank'%>
 </div>
+<p class="mt-4"><b>Check back for more memorization methods, charts, etc.</b></p>
+
 
 <script>
   $(".download").on("click", function() {
