--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -483,3 +483,10 @@ CHURCH SERVICE TIMES
   border-radius: 5px;
   padding: 9px;
 }
+
+/*----------
+WELCOME PAGE
+------------*/
+#welcome-title {
+  font-size: 27.4px;
+}
