--- a/app/views/shared/_carousel.html.erb
+++ b/app/views/shared/_carousel.html.erb
@@ -1,17 +1,17 @@
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active ">
-      <%= image_tag "hard-preaching.jpg", alt: "First slide", class: "d-block img-fluid" %>
+      <%= image_tag "carousel/WEBSITE-CAROUSEL-1.png", alt: "First slide", class: "d-block img-fluid" %>
       <div class="carousel-caption d-none d-md-block">
       </div>
     </div>
     <div class="carousel-item">
-      <%= image_tag "hymns.jpg", alt: "Second slide", class: "d-block img-fluid" %>
+      <%= image_tag "carousel/WEBSITE-CAROUSEL-2.png", alt: "Second slide", class: "d-block img-fluid" %>
       <div class="carousel-caption d-none d-md-block">
       </div>
     </div>
     <div class="carousel-item">
-      <%= image_tag "congregation.jpg", alt: "Third slide", class: "d-block img-fluid" %>
+      <%= image_tag "carousel/WEBSITE-CAROUSEL-3.png", alt: "Third slide", class: "d-block img-fluid" %>
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
