--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,16 +1,16 @@
 <div class="d-flex flex-nowrap">
   <%= render "shared/side-bar" %>
   <div>
-    <h3>Welcome to the website of Faithful Word Baptist Church!</h3>
+    <h4 id='welcome-title'>Welcome to the website of Faithful Word Baptist Church!</h4>
     <p>Over 13 million mp3 sermons have been downloaded from this site!</p>
     <p>We are a local New Testament church reaching the Phoenix area with the Gospel of Jesus Christ. Don't expect anything contemporary or liberal. We are an
-    <b>Old-Fashioned</b>,
-    <b>Independent</b>,
-    <b>Fundamental</b>,
-    <b>King James Bible Only</b>,
-    <b>Soul-Winning</b>,
-    <b>Baptist</b>,
-    <b>Church</b>.</p>
+    <b>old-fashioned</b>,
+    <b>independent</b>,
+    <b>fundamental</b>,
+    <b>King James Bible only</b>,
+    <b>soul-winning</b>
+    <b>Baptist</b>
+    <b>church</b>.</p>
     <p>Faithful Word Baptist Church is a young, family-integrated church. We would love to get to know you personally at one of our services!</p>
     <p><%= image_tag 'new_sml_27x13.gif', style:"margin-right: 5px;" %>Pastor Anderson's materials have now been translated into <%= link_to "over 115 languages!", foreignlanguages_path %></p>
     <p><%= image_tag 'new_sml_27x13.gif', style:"margin-right: 5px;" %>Take a video tour of our church building:</p>
