--- a/app/views/pages/churchdirectory.html.erb
+++ b/app/views/pages/churchdirectory.html.erb
@@ -6,7 +6,7 @@
     <h5>Instructions on how to find the best church in your area:</h5>
       <p>
         1. Visit the Independent Baptist Church Locator known as
-        <%= link_to 'Military Get Saved', 'http://militarygetsaved.tripod.com/findchurch.html' %>
+        <%= link_to 'Military Get Saved', 'http://militarygetsaved.tripod.com/findchurch.html', target: '_blank' %>
       </p>
       <p>
         2. Click on your state in the left hand sidebar.
