--- a/app/views/pages/live.html.erb
+++ b/app/views/pages/live.html.erb
@@ -3,7 +3,7 @@
   <%= render "shared/side-bar" %>
   <div>
     <h4>YouTube Live</h4>
-    <p>Live streaming video of our services can be viewed using the embedded YouTube player below. If you are on this page at a scheduled service time, and the embedded player is not working, click here to view the live feed.</p>
+    <p>Live streaming video of our services can be viewed using the embedded YouTube players below. If you are on this page at a scheduled service time, and the embedded player is not working, click here to view the live feed.</p>
     <script src="https://apis.google.com/js/platform.js"></script>
     <div class="d-flex flex-wrap">
       <div class="mr-auto">
