--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,15 +1,13 @@
-<div class="bar">
-    <%= link_to "Preaching", preaching_path, class: "top-btn" %>
-    <%= link_to "Soul Winning", soulwinning_path, class: "top-btn" %>
-    <%= link_to "Our Pastor", ourpastor_path, class: "top-btn" %>
-    <%= link_to "Service Times", service_path, class: "top-btn" %>
-    <%= link_to "Location", location_path, class: "top-btn" %>
-    <%= link_to "Bible Memory", biblememory_path, class: "top-btn" %>
-    <%= link_to "Events", events_path, class: "top-btn" %>
-  <%= form_tag do %>
-    <div class="form-inline">
-      <%= search_field_tag 'Search', nil, class: 'form-control form-control-sm bar-search d-inline-block' %>
-      <%= submit_tag 'Search', class: 'yellow-btn d-inline-block' %>
-    </div>
+<div class="bar d-flex">
+  <%= link_to "Preaching", preaching_path, class: "top-btn" %>
+  <%= link_to "Soul Winning", soulwinning_path, class: "top-btn" %>
+  <%= link_to "Our Pastor", ourpastor_path, class: "top-btn" %>
+  <%= link_to "Service Times", service_path, class: "top-btn" %>
+  <%= link_to "Location", location_path, class: "top-btn" %>
+  <%= link_to "Bible Memory", biblememory_path, class: "top-btn" %>
+  <%= link_to "Events", events_path, class: "top-btn" %>
+  <%= form_tag preaching_path, :method => :get, class: "d-flex bar-search" do %>
+    <%= text_field_tag :search, params[:search], placeholder: 'Search Sermon',class: 'form-control form-control-sm', style: 'margin-right: 4.5px' %>
+    <%= image_submit_tag 'search_icon.svg', class: 'search-btn' %>
   <% end %>
 </div>
