--- a/app/views/shared/_side-bar.html.erb
+++ b/app/views/shared/_side-bar.html.erb
@@ -1,54 +1,26 @@
 <div class="side-column" align="center">
   <% if current_page?(root_path) %>
-    <%= link_to(ourpastor_path, class: "browse-side-image ") do %>
-      <%= image_tag 'pastor.jpg', class: "d-block mx-auto"%>
+    <%= link_to(ourpastor_path, class: "browse-side-image") do %>
+      <%= image_tag 'pastor.jpg', class: "d-block mx-auto" %>
       <p>Pastor Steven L. Anderson</p>
     <% end %>
   <% end %>
   <div class="browse-side-column">
-    <ul class="browse-categories-side">
-      <li>
-        <%= link_to "Watch Services Live", live_path, class: "browse-link#{" active-s" if current_page?(live_path)}" %>
-      </li>
-      <li>
-        <%= link_to "Doctrinal Statement", doctrinalstatement_path, class: "browse-link#{" active-s" if current_page?(doctrinalstatement_path)}" %>
-      </li>
-      <li>
-        <%= link_to "Foreign Languages", foreignlanguages_path, class: "browse-link#{" active-s" if current_page?(foreignlanguages_path)}" %>
-      </li>
+    <%= link_to "Watch Services Live", live_path, class: "browse-link#{" active" if current_page?(live_path)}" %>
+    <%= link_to "Doctrinal Statement", doctrinalstatement_path, class: "browse-link#{" active" if current_page?(doctrinalstatement_path)}" %>
+    <%= link_to "Foreign Languages", foreignlanguages_path, class: "browse-link#{" active" if current_page?(foreignlanguages_path)}" %>
       <%= render 'shared/foreign-language-dropdown'if current_page?(foreignlanguages_path) %>
-      <li>
-        <%= link_to "Church Directory", churchdirectory_path, class: "browse-link#{" active-s" if current_page?(churchdirectory_path)}" %>
-      </li>
-      <li>
-        <%= link_to "Pictures", "https://get.google.com/albumarchive/117089279522537034856", class: "browse-link", target: '_blank' %>
-      </li>
-      <li>
-        <%= link_to "Instagram", "http://www.instagram.com/faithfulwordbaptist", class: "browse-link", target: '_blank' %>
-      </li>
-      <li>
-        <%= link_to "Hymns", "", class: "browse-link"%>
-      </li>
-      <li>
-        <%= link_to "Psalms", psalms_path, class: "browse-link#{" active-s" if current_page?(psalms_path)}" %>
-      </li>
-      <li>
-        <%= link_to "Radio", radio_path, class: "browse-link#{" active-s" if current_page?(radio_path)}" %>
-      </li>
-      <li>
-        <%= link_to audiobible_path, class: "browse-link#{" active-s" if current_page?(audiobible_path)}" do %>
-          Audio Bible <%= image_tag 'new_sml_27x13.gif', style:"margin-right: 5px;" %>
-        <% end %>
-      </li>
-      <li>
-        <%= link_to "Botswana", "http://www.fwbcbotswana.com", class: "browse-link", target: '_blank' %>
-      </li>
-      <li>
-        <%= link_to "Malawi", malawi_path, class: "browse-link#{" active-s" if current_page?(malawi_path)}" %>
-      </li>
-      <li>
-        <%= link_to "Donate", "http://www.truebornsons.com/donate-to-fwbc", class: "browse-link", target: '_blank' %>
-      </li>
-    </ul>
+    <%= link_to "Church Directory", churchdirectory_path, class: "browse-link#{" active" if current_page?(churchdirectory_path)}" %>
+    <%= link_to "Pictures", "https://get.google.com/albumarchive/117089279522537034856", class: "browse-link", target: '_blank' %>
+    <%= link_to "Instagram", "http://www.instagram.com/faithfulwordbaptist", class: "browse-link", target: '_blank' %>
+    <%= link_to "Hymns", hymns_path, class: "browse-link#{" active" if current_page?(hymns_path)}"%>
+    <%= link_to "Psalms", psalms_path, class: "browse-link#{" active" if current_page?(psalms_path)}" %>
+    <%= link_to "Radio", radio_path, class: "browse-link#{" active" if current_page?(radio_path)}" %>
+    <%= link_to audiobible_path, class: "browse-link#{" active" if current_page?(audiobible_path)}" do %>
+      Audio Bible <%= image_tag 'new_sml_27x13.gif', style:"margin-right: 5px;" %>
+    <% end %>
+    <%= link_to "Botswana", "http://www.fwbcbotswana.com", class: "browse-link", target: '_blank' %>
+    <%= link_to "Malawi", malawi_path, class: "browse-link#{" active" if current_page?(malawi_path)}" %>
+    <%= link_to "Donate", "http://www.truebornsons.com/donate-to-fwbc", class: "browse-link", target: '_blank' %>
   </div>
 </div>
