--- a/app/views/foreign_languages/show.html.erb
+++ b/app/views/foreign_languages/show.html.erb
@@ -1,11 +1,13 @@
 <% provide(:title, @tongue.tongue) %>
-<%= render 'translations/new_form' %>
+<%= render('translations/new_form') if admin? %>
 <% image_size = 370 %>
 <div class="d-flex flex-nowrap">
   <%= render "shared/side-bar" %>
   <div>
     <h4><%= @tongue.tongue %></h4>
-    <button type="button" class="sky-btn" data-toggle="modal" data-target="#exampleModal">New Translation</button>
+    <% if admin? %>
+      <button type="button" class="sky-btn" data-toggle="modal" data-target="#exampleModal">New Translation</button>
+    <% end %>
     <% @tongue.translations.each do |translation|%>
       <div class="card", style="width: <%= image_size + 2 %>px">
         <%= image_tag "MARCHING-TO-ZION.jpg", class: "card-img-top", style: "width: #{image_size}px" %>
