--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -7,12 +7,7 @@
     <%= stylesheet_link_tag 'application' %>
     <%= javascript_include_tag 'application' %>
   </head>
-  <body>
-    <div id="central">
-      <%= !current_page?(root_path) ? render('shared/banner') : render('shared/carousel') %>
-      <div class="p-4">
-        <%= yield %>
-      </div>
-    </div>
+  <body style='overflow: hidden'>
+    <%= yield %>
   </body>
 </html>
