--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -572,3 +572,9 @@ ADMIN STYLING
   text-decoration: none;
   background: linear-gradient(#c3d0e9, #ecf1fa);
 }
+/*--------
+OUR PASTOR
+----------*/
+.ourpastor p{
+  line-height: 1.15;
+}
