--- a/app/views/preaching/index.html.erb
+++ b/app/views/preaching/index.html.erb
@@ -14,15 +14,15 @@
     <button type="button" class="sky-btn" data-toggle="modal" data-target="#exampleModal">Upload Sermon</button>
   <% end %>
 </div>
-<div class="d-flex align-items-start">
+<div class="d-flex align-items-center">
   <div class="d-flex">
     <% @years.reverse.each do |year|  %>
-      <%= link_to "#{year}", preaching_path(year: year), class: "yellow-btn" %>
+      <%= link_to "#{year}", preaching_path(year: year), class: "yellow-btn", style: 'margin-right: 4px' %>
     <% end %>
   </div>
-  <%= form_tag preaching_path, :method => 'get', :id => "sermon_search", class: 'form-inline' do %>
-      <%= text_field_tag :search, params[:search], autocomplete: "off" %>
-      <%= submit_tag 'Search', :name => nil %>
+  <%= form_tag preaching_path, :method => 'get', :id => "sermon_search", class: 'd-flex bar2-search' do %>
+    <%= text_field_tag :search, params[:search], autocomplete: "off", class: 'form-control form-control-small' %>
+    <%= submit_tag 'Search', :name => nil, class: 'yellow-btn' %>
   <% end %>
 </div>
 
