--- a/app/views/preaching/show.html.erb
+++ b/app/views/preaching/show.html.erb
@@ -11,6 +11,7 @@
     <%= ytube_embed(@sermon.ytube_id, 733, 9 * 733 / 16) unless @sermon.ytube_id.blank? %>
     <%= audio_tag(@sermon.mp3, autoplay: false, controls: true) %><br>
     <p><%= simple_format(@sermon.transcript) %></p>
+    <%= @sermon.mp3  if admin?%>
   </div>
   <div class="pl-4">
     <% if admin? %>
