fixed sermondownloadcount css

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -367,7 +367,7 @@ a:hover {
   margin-bottom: 5px;
 }
 
-#sermon-downlofads-number {
+#sermon-downloads-number {
   font-size: 24px;
   font-weight: 800;
   line-height: 1;
