--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,5 +1,5 @@
 <div id="event_<%= event.id %>">
-  <h6><%= event.title %></h6>
+  <h6 class='mb-0'><%= event.title %></h6>
   <p class='mb-0'><%= event.date.strftime("%A %B %d") %></p>
   <p class='mb-0'><%= event.location %></p>
   <!--<button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#myupdateevent_<%= event.id %>">Edit</button>
