--- a/app/views/preaching/_update_form.html.erb
+++ b/app/views/preaching/_update_form.html.erb
@@ -8,37 +8,37 @@
             <div class="col-6">
               <div class="form-group">
                 <%= f.label :datetime %>
-                <%= f.datetime_local_field :datetime, class: "form-control" %>
+                <%= f.datetime_local_field :datetime, class: "form-control form-control-sm" %>
               </div>
               <div class="form-group">
                 <%= f.label :title %>
-                <%= f.text_field :title, class: "form-control", type: "text", placeholder: "Title of Sermon", autofocus: true %>
+                <%= f.text_field :title, class: "form-control form-control-sm", type: "text", placeholder: "Title of Sermon", autofocus: true %>
               </div>
               <div class="form-group">
                 <%= f.label :preacher %>
-                <%= f.text_field :preacher, class: "form-control", type: "text", placeholder: "Preacher" %>
+                <%= f.text_field :preacher, class: "form-control form-control-sm", type: "text", placeholder: "Preacher" %>
               </div>
               <div class="form-group">
                 <%= f.label :mp3 %>
                 <%= f.file_field :mp3, class: "form-control-file" %>
               </div>
               <%= f.label :ytube_id, "YouTube ID" %>
-              <div class="input-group">
+              <div class="input-group input-group-sm">
                 <span class="input-group-addon">www.youtube.com/watch?v=</span>
                 <%= f.text_field :ytube_id, class: "form-control" %>
               </div>
               <br>
               <div class="form-group">
                 <%= f.label :scloud, "Soundcloud URL" %>
-                <%= f.text_field :scloud, class: "form-control", placeholder: "Soundcloud URL" %>
+                <%= f.text_field :scloud, class: "form-control form-control-sm", placeholder: "Soundcloud URL" %>
               </div>
               <div class="form-group">
                 <%= f.label :location %>
-                <%= f.text_field :location, class: "form-control", type: "text", placeholder: "Location" %>
+                <%= f.text_field :location, class: "form-control form-control-sm", type: "text", placeholder: "Location" %>
               </div>
               <div class="form-group">
                 <%= f.label :format %>
-                <%= f.select :format, ['Preaching', 'Documentary', 'Series'], {}, class: "form-control" %>
+                <%= f.select :format, ['Preaching', 'Documentary', 'Series'], {}, class: "form-control form-control-sm" %>
               </div>
               <div class="form-check">
                 <%= f.label :fire_hard do %>
@@ -51,7 +51,7 @@
             <div class="col-6">
               <div class="form-group">
                 <%= f.label :transcript %>
-                <%= f.text_area :transcript, class: "form-control", rows: 30 %>
+                <%= f.text_area :transcript, class: "form-control form-control-sm", rows: 35 %>
               </div>
             </div>
           </div>
