--- a/app/views/preaching/index.js.erb
+++ b/app/views/preaching/index.js.erb
@@ -1,1 +1,1 @@
-$("#sermons").html("<%= escape_javascript(render("sermons")) %>");
+$("#sermons").html("<%= escape_javascript(render("sermons_search")) %>");
