--- a/app/views/translations/_new_form.html.erb
+++ b/app/views/translations/_new_form.html.erb
@@ -5,21 +5,22 @@
         <div class="modal-body">
             <h5>New <%= @translation.language.tongue %> Translation</h5>
             <div class="form-group">
-              <%= f.text_field :title, class: "form-control", type: "text", placeholder: "Title", autofocus: true %>
+              <%= f.text_field :title, class: "form-control form-control-sm", type: "text", placeholder: "Title", autofocus: true %>
             </div>
             <div class="form-group">
-              <%= f.date_field :published, class: "form-control", type: "date" %>
+              <%= f.date_field :published, class: "form-control form-control-sm", type: "date" %>
             </div>
             <div class="form-group">
-              <div class="input-group">
+              <div class="input-group input-group-sm">
                 <span class="input-group-addon" id="basic-addon3">www.youtube.com/watch?v=</span>
-                <%= f.text_field :video_id, class: "form-control", type: "text" %>
+                <%= f.text_field :video_id, class: "form-control form-control-sm", type: "text" %>
               </div>
             </div>
             <div class="form-group">
-              <%= f.text_area :body, class: "form-control", type: "text", placeholder: "Body" %>
+              <%= f.text_area :body, class: "form-control form-control-sm", type: "text", placeholder: "Transript", rows: 20 %>
             </div>
-              <%= f.submit "Create", class: "btn btn-primary" %>
+              <%= f.hidden_field(:language_id, :value => @translation.language.id) %>
+              <%= f.submit "Create", class: "sky-btn" %>
         </div>
       </div>
     </div>
