--- a/app/views/translations/show.html.erb
+++ b/app/views/translations/show.html.erb
@@ -8,4 +8,4 @@
   </div>
 <% end %>
 <h5>Transcript:</h5>
-<p><%= simple_format(@translation.body) %></p>
+<p><%= markdown(@translation.body) %></p>
