--- a/app/views/audio_bible/index.html.erb
+++ b/app/views/audio_bible/index.html.erb
@@ -7,6 +7,12 @@
       <div class="progress">
         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 4%">4%</div>
       </div>
+      
+      <% @books.each do |book| %>
+      <div>
+        <h6><%= book.title%> <small>-<%= book.total_chapters%> chapters</small></h6>
+      </div>
+      <% end %>
       <blockquote class="verse">
         <p>“For the word of God is quick, and powerful, and sharper than any twoedged sword, piercing even to the dividing asunder of soul and spirit, and of the joints and marrow, and is a discerner of the thoughts and intents of the heart.”</p>
         <p>Hebrews 4:12</p>
