--- a/app/views/pages/radio.html.erb
+++ b/app/views/pages/radio.html.erb
@@ -4,46 +4,46 @@
   <div>
     <h4>Faithful Word Baptist Church Radio 24/7!</h4>
     <script src="http://player.radiocdn.com/iframe.js?hash=ce6989c17a874451cbb61cb5fb1732b6e07fc458-118-41"></script>
-    <div>
-      Monday - Friday Schedule:<br>
-      Freestyle<br>
-      12:00AM - 7:00AM<br>
-      Bible Reading (Psalms)<br>
-      7:00AM - 8:00AM<br>
-      Congregational Hymns<br>
-      8:00AM - 9:00AM<br>
-      Bible Preaching<br>
-      9:00aM - 11:00AM<br>
-      Congregational Hymns<br>
-      11:00AM - 1:00PM<br>
-      Bible Preaching<br>
-      1:00PM - 3:00PM<br>
-      Congregational Hymns<br>
-      3:00PM - 5:00PM<br>
-      Bible Preaching<br>
-      5:00PM - 7:00PM<br>
-      Congregational Hymns<br>
-      7:00PM - 9:00PM<br>
-      Freestyle<br>
-      9:00PM - 12:00AM<br>
+    <div class="radio-schedule mb-4">
+      <h5>Monday - Friday Schedule:</h5>
+      <p>Freestyle</p>
+      <h6>12:00AM - 7:00AM</h6>
+      <p>Bible Reading (Psalms)</p>
+      <h6>7:00AM - 8:00AM</h6>
+      <p>Congregational Hymns</p>
+      <h6>8:00AM - 9:00AM</h6>
+      <p>Bible Preaching</p>
+      <h6>9:00AM - 11:00AM</h6>
+      <p>Congregational Hymns</p>
+      <h6>11:00AM - 1:00PM</h6>
+      <p>Bible Preaching</p>
+      <h6>1:00PM - 3:00PM</h6>
+      <p>Congregational Hymns</p>
+      <h6>3:00PM - 5:00PM</h6>
+      <p>Bible Preaching</p>
+      <h6>5:00PM - 7:00PM</h6>
+      <p>Congregational Hymns</p>
+      <h6>7:00PM - 9:00PM</h6>
+      <p>Freestyle</p>
+      <h6>9:00PM - 12:00AM</h6>
     </div>
-      Saturday - Sunday Schedule:
-      Freestyle
-      12:00AM - 12:00AM
-      
-      <h4>3 Other Ways to Listen:</h4>
-      <ul class="list-unstyled">
-      <li>1. Listen From Your iPhone by simply visiting this page in the browser.
-      <li>2. Listen From Your Android Smart Phone by Downloading the Winamp App, clicking on Shoutcast Radio, and searching "Faithful Word Baptist Church."
-      <li>3. Embed the player into your website or blog by using the following embed code:<br>
-      <code>
-        &lt;script src="http://player.radiocdn.com/iframe.js?hash=ce6989c17a874451cbb61cb5fb1732b6e07fc458-118-41"&gt;&lt;/script&gt;
-      </code>
-      
-      </ul>
-      <blockquote class="verse">
-        <p>“These were more noble than those in Thessalonica, in that they received the word with all readiness of mind, and searched the scriptures daily, whether those things were so.”</p>
-        <p>Acts 17:11</p>
-      </blockquote>
+    <div class="radio-schedule mb-4">
+      <h5>Saturday - Sunday Schedule:</h5>
+      <p>Freestyle</p>
+      <h6>12:00AM - 12:00AM</h6>
+    </div>
+    
+    <h4>3 Other Ways to Listen:</h4>
+    <ul class="list-unstyled">
+    <li>1. Listen From Your iPhone by simply visiting this page in the browser.
+    <li>2. Listen From Your Android Smart Phone by Downloading the Winamp App, clicking on Shoutcast Radio, and searching "Faithful Word Baptist Church."
+    <li>3. Embed the player into your website or blog by using the following embed code:<br>
+    <code>&lt;script src="http://player.radiocdn.com/iframe.js?hash=ce6989c17a874451cbb61cb5fb1732b6e07fc458-118-41"&gt;&lt;/script&gt;</code>
+    
+    </ul>
+    <blockquote class="verse">
+      <p>“These were more noble than those in Thessalonica, in that they received the word with all readiness of mind, and searched the scriptures daily, whether those things were so.”</p>
+      <p>Acts 17:11</p>
+    </blockquote>
   </div>
 </div>
