--- a/app/views/preaching/show.html.erb
+++ b/app/views/preaching/show.html.erb
@@ -17,7 +17,7 @@
   <div class="pl-4">
     <% if admin? %>
       <button type="button" class="sky-btn mb-2" data-toggle="modal" data-target="#exampleModal">Update Sermon</button><br>
-      <%= link_to 'Destroy',  "/sermons/#{@sermon.id}",  method: :delete, data: { confirm: 'Are you sure?' }, class: "sky-btn mb-2" %>
+      <%= link_to 'Destroy',  "/sermons/#{@sermon.id}",  method: :delete, data: { confirm: 'Are you sure?' }, class: "red-btn mb-2" %>
     <% end %>
     <%= link_to "Download MP3", @sermon.mp3.url, class: "sky-btn mb-2 download", download: '', id: @sermon.id %>
     <p id="sermon-downloads-heading">Total Downloads</p>
